# translator

./: .gitignore  CMakeLists.txt  ENUMS.h  Errors.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  OPS.cpp  OPS.h  Parser.cpp  Parser.h  README.md  Token.cpp  Token.h  floats.txt  main.cpp  sortREAD.txt  test3.txt  test4.txt  text.txt  text2.txt  text5.txt  tfest.txt  translator.cpp  translator.sln  translatorcpp.cpp  СинтАнализ.cpp  анализатор.cpp
INTERPRITATOR/: Avtomatnaya_Grammatika_Dlya_Lexera.xlsx  Lexemy.docx  Lexemy2.docx  integer.docx  Интерпритатор.rar  обозначения.docx
INTERPRITATOR/BVK_Interpretator/: BVK_Interpretator.sln
INTERPRITATOR/BVK_Interpretator/BVK_Interpretator/: BVK_Interpretator.cpp  BVK_Interpretator.vcxproj  BVK_Interpretator.vcxproj.filters  ReadMe.txt  program0.txt  program1.txt  program2.txt  program3.txt  program4.txt  program5.txt  settings.h  test.txt  test_massiv1.txt  test_massiv2.txt  test_massiv3.txt
INTERPRITATOR/BVK_Interpretator/BVK_Interpretator/Debug/: Alfa_Kostyuque.pch
INTERPRITATOR/BVK_Interpretator/ipch/ALFA_KOSTYUQUE-8d1e69ea/: ALFA_KOSTYUQUE-6c609ff9.ipch
INTERPRITATOR/BVK_Interpretator1/: Alfa_Kostyuque.sln
INTERPRITATOR/BVK_Interpretator1/Alfa_Kostyuque/: Alfa_Kostyuque.cpp  Alfa_Kostyuque.vcxproj  Alfa_Kostyuque.vcxproj.filters  stdafx.cpp  target.txt  target1.txt
INTERPRITATOR/BVK_Interpretator1/Debug/: Alfa_Kostyuque.ilk
translator/: README.md
translator/Debug/: translator.ilk
translator/translator/Debug/: CodeAnalysisResultManifest.txt  translator.exe.recipe
(+39 files in other folders)
